2011-06-14  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] fast/dom/HTMLScriptElement/nested-execution.html failed
        https://bugs.webkit.org/show_bug.cgi?id=62227

        * platform/qt/Skipped:
2011-06-14  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] fast/dom/HTMLScriptElement/nested-execution.html failed
        https://bugs.webkit.org/show_bug.cgi?id=62227

        QtWebkit does not yet support different CacheModels. This change will
        expose setCacheModel() with a stub implementation, which is enough to pass the LayoutTest.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setCacheModel):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/78213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88838 268f45cc-cd09-0410-ab3c-d52691b4dbfc